<resources>
    <string name="app_name">یارا تیوب</string>

    <!--bottom navigation items-->
    <string name="title_bottom_nav_category">دسته بندی ها</string>
    <string name="title_bottom_nav_home">صفحه اصلی</string>

    <!--nav drawer items-->
    <string name="title_username">نام کاربر</string>
    <string name="title_profile">پروفایل</string>
    <string name="title_aboutus">درباره ما</string>
    <string name="title_calltous">تماس با ما</string>

    <!--profile page titles-->
    <string name="title_profile_username">نام نمایشی</string>
    <string name="title_profile_sex">جنسیت</string>
    <string name="title_profile_birthday">تاریخ تولد</string>

    <string name="description">توضیحات</string>
    <string name="user_comment">نظرات کاربران</string>
    <string name="leave_comment">نظر دهید</string>
    <string name="checking_internet">مشکل اتصال به اینترنت </string>
    <string name="descrption_not_found">توضیحات موجود نیست</string>

    <string name="title_via_phonenumber">از طریق شماره موبایل</string>
    <string name="title_via_google">از طریق حساب گوگل</string>
    <string name="title_enter">ورود</string>
    <string name="enter_via_phonenumber">ورود از طریق شماره موبایل</string>
    <string name="enter_phone_number">شماره موبایل خود را وارد کنید</string>
    <string name="confirm_btn">ثبت</string>
    <string name="enter_verificationcode">کد فعالسازی را وارد کنید</string>
    <string name="verification_code">کد فعالسازی</string>
    <string name="not_receive_thecode">کد را دریافت نکردید؟</string>
    <string name="edit_phonenumber">تصحیح شماره</string>
    <string name="comment">نظر</string>
    <string name="comment_sent">نظر شما ارسال شد</string>
    <string name="save_changes">ثبت تغییرات</string>
    <string name="cancel">انصراف</string>
    <string name="product_detail">جزيیات محصول</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_bottom_nav_more">بیشتر</string>
    <string name="changes_saved">تغییرات ذخیره شد</string>
    <string name="enter_username">نام کاربری را وارد کنید</string>
    <string name="gallery">گالری</string>


</resources>
