<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="280dp"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".login.EnterVerificationCodeDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/iran_san"
        android:text="@string/enter_verificationcode"
        android:textColor="#000" />

    <EditText
        android:id="@+id/enter_verification_code_et"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/verification_code"
        android:textColor="#FFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/not_receive_thecode" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/edit_phonenumber"
            android:textColor="#FFF"
            android:textColorHint="@color/colorPrimary" />

        <Button
            android:id="@+id/confirm_verificationcode_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/confirm_btn"
            android:textColor="#FFF" />

    </LinearLayout>

</LinearLayout>