<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="280dp"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".login.PhoneNumberDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/iran_san"
        android:text="@string/enter_via_phonenumber"
        android:textColor="#000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/enter_phone_number"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/confirm_phonenumber_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/confirm_btn"
        android:textColor="#FFF" />

</LinearLayout>