<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.ProfileFragment">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        android:src="@drawable/images_avatar_circular" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:text="@string/title_profile_username"
        android:textColor="#000" />

    <TextView
        android:id="@+id/profile_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin_Top="10dp"
        android:text="مهشید گنجه" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin_End="10dp"
        android:text="@string/title_profile_sex"
        android:textColor="#000" />

    <TextView
        android:id="@+id/profile_sex_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="زن" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/title_profile_birthday"
        android:textColor="#000" />


</LinearLayout>