<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    tools:context=".productdetail.ProductDetailFragment">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ProgressBar
                android:id="@+id/product_detail_progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/first_card" />

            <android.support.v7.widget.CardView
                android:id="@+id/first_card"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:cardCornerRadius="4dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/header_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_margin="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/images_16_9_straight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/product_detail_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/iran_san"
                        android:text="عنوان"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/header_imageView" />

                    <Button
                        android:id="@+id/play_video_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="316dp"
                        android:layout_marginStart="316dp"
                        android:drawableLeft="@drawable/icon_check_circle_filled"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/header_imageView" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/second_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_card">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/product_detail_titleofdescription_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/iran_san"
                        android:text="@string/description"
                        android:textColor="#000"
                        app:layout_constraintBottom_toTopOf="@+id/product_detail_description_tv"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/product_detail_description_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/descrption_not_found"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/iran_san"
                android:text="@string/user_comment"
                android:textColor="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_card" />

            <Button
                android:id="@+id/comment_btn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/blue_round"
                android:text="@string/leave_comment"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_card"
                tools:layout_editor_absoluteX="30dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/product_detail_comment_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/comment_btn">

            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>